# handler/deleteProduct.go
@@ -19,7 +19,7 @@ import (
 // @Success 200 {object} DeleteProductResponse
 // @Failure 400 {object} ErrorResponse
 // @Failure 404 {object} ErrorResponse
-// @Router /product [delete]
+// @Router /secured/product [delete]
 func DeleteProduct(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
